Change program state

--- a/install/Makefile
+++ b/install/Makefile
@@ -4,14 +4,11 @@ INCLUDE=/usr/local/include/openDSU
 
 install: make_dir
 	cp ../libopenDSU.so $(LIB)/libopenDSU.so
-	cp ../openDSU.h $(INCLUDE)/openDSU.h
-	cp openDSU.conf /etc/ld.so.conf.d/openDSU.conf	# Ubuntu.
+	cp ../openDSU $(LIB)/openDSU
 
 uninstall:
 	rm -f $(LIB)/libopenDSU.so
-	rm -f $(INCLUDE)/openDSU.h
-	rm -f /etc/ld.so.conf.d/openDSU.conf # Ubuntu.
+	rm -f $(LIB)/openDSU
 
 make_dir:
 	mkdir -p $(LIB)
-	mkdir -p $(INCLUDE)
