Add apache to benchmarking

--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -3,13 +3,14 @@ current_dir := $(dir $(mkfile_path))
 
 
 
-benchmark: lighttpd nginx.o
+
+benchmark: lighttpd.o nginx.o
 
 
 
 
 # Install lighttpd.
-lighttpd: lighttpd1.4/src/lighttpd lighttpd1.4/src/libs/mod_access.so
+lighttpd.o: lighttpd1.4/src/lighttpd lighttpd1.4/src/libs/mod_access.so
 	cp lighttpd1.4/src/lighttpd lighttpd.o
 
 lighttpd1.4:
@@ -33,6 +34,7 @@ lighttpd1.4/src/libs/mod_access.so: lighttpd1.4/Makefile
 	cd lighttpd1.4;\
 	mkdir -p src/libs;\
 	make install
+	
 
 
 
@@ -61,8 +63,49 @@ nginx.o: nginx/objs/nginx
 
 
 
+# Install Apache httpd
+apache:
+	git clone https://github.com/apache/httpd.git
+	cp -r httpd apache
+	rm -rf httpd
+
+apache/configure: apache
+	cd apache;\
+	svn co http://svn.apache.org/repos/asf/apr/apr/trunk srclib/apr;\
+	./buildconf
+
+apache/Makefile: apache/configure
+	cd apache;\
+	./configure\
+		--prefix=$(current_dir)etc/apache\
+		--libdir=$(current_dir)etc/modules
+
+etc/apache:
+	mkdir -p $(current_dir)etc/apache
+
+etc/apache/logs: etc/apache
+	mkdir -p $(current_dir)etc/apache/logs
+
+etc/apache/httpd: apache/Makefile
+	cd apache;\
+	make;\
+	make install
+
+etc/apache/conf/httpd.conf:
+	cp config/apache.conf etc/apache/conf/httpd.conf
+
+apache.o: etc/apache/logs etc/apache/httpd etc/apache/conf/httpd.conf
+	cp apache/httpd apache.o
+	
+
+
+
 clean:
 	rm -rf lighttpd1.4
 	rm -rf nginx
+	rm -rf apache
+	rm -rf etc
 	rm -f nginx.o
 	rm -f lighttpd.o
+	rm -f apache.o
+
