--- a/benchmark/config/.lighttpd.conf
+++ b/benchmark/config/.lighttpd.conf
@@ -1,5 +1,5 @@
 server.event-handler 		= "select"
-server.document-root       	= "/var/local/www"
+server.document-root       	= "{{dsu_www}}"
 #server.username            = "root"
 server.port                	=  80
 #server.max-worker 		   	=  1
