--- a/benchmark/config/.nginx.conf
+++ b/benchmark/config/.nginx.conf
@@ -9,7 +9,7 @@ http {
     server {
         listen      80;
         location / {
-            root /var/local/www/;
+            root {{dsu_www}};
         }
     }
 }
