--- a/benchmark/config/.nginx.conf
+++ b/benchmark/config/.nginx.conf
@@ -2,14 +2,14 @@ user root;
 worker_processes 1;
 
 events {
-    worker_connections  3;
+    worker_connections  1000;
     use select;
 }
 http {
     server {
         listen      80;
         location / {
-            root {{dsu_www}};
+			root {{dsu_www}}
         }
     }
 }
