--- a/benchmark/config/.nginx.conf
+++ b/benchmark/config/.nginx.conf
@@ -3,13 +3,12 @@ worker_processes 1;
 
 events {
     worker_connections  1000;
-    use select;
 }
 http {
     server {
         listen      80;
         location / {
-			root {{dsu_www}}
+			root {{dsu_www}};
         }
     }
 }
