--- a/benchmark/config/.apache.conf
+++ b/benchmark/config/.apache.conf
@@ -28,12 +28,18 @@ LoadModule alias_module modules/mod_alias.so
 
 
 <IfModule unixd_module>
-
-
-User openDSU
-Group openDSU
-
+	User openDSU
+	Group openDSU
 </IfModule>
+
+
+<IfModule mpm_event_module>
+	ThreadsPerChild 16
+	ServerLimit 4
+	MaxRequestWorkers 64
+	AsyncRequestWorkerFactor 2
+</IfModule>
+
 
 ServerName localhost:80
 
