--- a/benchmark/config/.lighttpd.conf
+++ b/benchmark/config/.lighttpd.conf
@@ -2,6 +2,7 @@ server.document-root       	= "{{dsu_www}}"
 #server.username            = "root"
 server.port                	=  80
 #server.max-worker 		   	=  1
+server.event-handler        = "select"
 
 mimetype.assign   = ( ".png"  => "image/png",
                       ".jpg"  => "image/jpeg",
