No shared mem 2 - termination

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,8 +9,8 @@ CFLAGS	+= -g2
 CC?=gcc
 
 
-DEBUG= -D DEBUG="\"$(log_dir)\""	
-#DEBUG=
+#DEBUG= -D DEBUG="\"$(log_dir)\""	
+DEBUG=
 
 SRCS:=$(wildcard *.c)
 T1OBJS:=$(patsubst %.c,%.o,$(SRCS))
