--- a/benchmark/config/.lighttpd.conf
+++ b/benchmark/config/.lighttpd.conf
@@ -2,7 +2,9 @@ server.document-root       	= "{{dsu_www}}"
 #server.username            = "root"
 server.port                	=  80
 #server.max-worker 		   	=  1
-server.event-handler        = "select"
+#server.event-handler        = "select"
+server.errorlog				= "/home/anoniem/Desktop/openDSU/benchmark/etc/lighttpd/error.log"
+server.max-keep-alive-idle  = 0
 
 mimetype.assign   = ( ".png"  => "image/png",
                       ".jpg"  => "image/jpeg",
