--- a/benchmark/config/.apache.conf
+++ b/benchmark/config/.apache.conf
@@ -33,6 +33,24 @@ LoadModule alias_module modules/mod_alias.so
 </IfModule>
 
 
+#<IfModule mpm_event_module>
+#	ThreadsPerChild 16
+#	ServerLimit 4
+#	MaxRequestWorkers 64
+#	AsyncRequestWorkerFactor 2
+#</IfModule>
+
+
+#<IfModule mpm_worker_module>
+#	ServerLimit         2
+#	StartServers        2
+#	MaxRequestWorkers   2
+#	MinSpareThreads     2
+#	MaxSpareThreads     2
+#	ThreadsPerChild     2
+#</IfModule>
+
+
 <IfModule mpm_event_module>
 	ThreadsPerChild 16
 	ServerLimit 4
