--- a/src/Makefile
+++ b/src/Makefile
@@ -9,8 +9,8 @@ CFLAGS	+= -g2
 CC?=gcc
 
 
-#DEBUG= -D TEST="\"$(log_dir)\""	
-DEBUG= -D DEBUG="\"$(log_dir)\""	
+DEBUG= -D TEST="\"$(log_dir)\""	
+#DEBUG= -D DEBUG="\"$(log_dir)\""	
 #DEBUG=
 
 SRCS:=$(wildcard *.c)
