--- a/benchmark/config/.apache.conf
+++ b/benchmark/config/.apache.conf
@@ -34,10 +34,11 @@ LoadModule alias_module modules/mod_alias.so
 
 
 #<IfModule mpm_event_module>
-#	ThreadsPerChild 16
-#	ServerLimit 4
-#	MaxRequestWorkers 64
-#	AsyncRequestWorkerFactor 2
+	ThreadsPerChild 128
+	ThreadLimit 128
+	ServerLimit 4
+	MaxRequestWorkers 512
+	AsyncRequestWorkerFactor 128
 #</IfModule>
 
 
